--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,44 +4,21 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm app.ts",
-    "build": "esbuild app.ts --bundle --platform=node --target=node20 --outdir=dist --format=esm --sourcemap",
-    "start": "node dist/app.js",
-    "lint": "eslint . --ext .ts,.js --fix --ignore-path .gitignore",
-    "test": "vitest"
+    "dev": "ts-node app.ts",
+    "build": "esbuild app.ts --bundle --platform=node --outfile=dist/app.js",
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "koa": "^2.15.0",
-    "@koa/router": "^12.0.1",
-    "koa-body": "^6.0.1",
-    "koa-helmet": "^8.0.0",
-    "koa-cors": "^2.0.0",
-    "koa-compress": "^5.1.0",
-    "koa-error-handler": "^1.0.0",
-    "koa-jwt": "^5.0.0",
-    "koa-passport": "^5.0.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "sequelize": "^6.35.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.10",
-    "winston": "^3.11.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
-    "dayjs": "^1.11.10",
-    "lodash": "^4.17.21",
-    "@csisp/types": "workspace:*"
+    "sequelize": "^6.35.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "ts-node": "^10.9.0",
+    "@types/koa": "^3.0.1",
     "esbuild": "^0.19.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.53.0",
-    "vitest": "^1.0.0"
+    "ts-node": "^10.9.2"
   }
 }
