--- a/apps/frontend-client/package.json
+++ b/apps/frontend-client/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "test": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.5.24",
-    "@vue/composition-api": "^1.8.4",
     "pinia": "^2.1.7",
     "vue-router": "^4.3.0",
     "axios": "^1.6.0",
@@ -22,18 +19,11 @@
     "@csisp/types": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.2",
     "vue-tsc": "^3.1.3",
-    "sass": "^1.69.5",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-vue": "^9.19.0",
-    "vitest": "^1.0.0"
+    "sass": "^1.69.5"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.2"
