--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "csisp-monorepo",
   "version": "1.0.0",
   "private": true,
@@ -7,8 +8,8 @@
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
     "test": "pnpm -r test",
-    "lint": "pnpm -r lint",
-    "clean": "pnpm -r clean",
+    "format": "eslint . --fix && pnpm prettier --config prettier.json --write . && stylelint '**/*.{css,scss,vue}' --fix",
+    "lint:staged": "lint-staged",
     "dev:admin": "pnpm --filter frontend-admin dev",
     "dev:client": "pnpm --filter frontend-client dev",
     "dev:backend": "pnpm --filter backend dev",
@@ -21,8 +22,38 @@
     "apps/*",
     "packages/*"
   ],
+  "lint-staged": {
+    "**/*.{js,mjs,cjs,ts,jsx,tsx,vue}": [
+      "eslint --fix"
+    ],
+    "**/*.{js,mjs,cjs,ts,jsx,tsx,vue,html,json,css,scss,md}": [
+      "prettier --config prettier.json --write"
+    ],
+    "**/*.{css,scss,vue}": [
+      "stylelint --fix"
+    ]
+  },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0"
+    "@eslint/js": "^9.0.0",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/node": "^20.19.25",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^15.0.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.6.1",
+    "lint-staged": "^16.2.6",
+    "postcss-html": "^1.8.0",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.25.0",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.46.4"
   }
 }
