--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "@types/shared",
+  "name": "@csisp/types",
   "version": "1.0.0",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "lint": "eslint ."
+    "build": "tsc"
   },
-  "devDependencies": {
-    "typescript": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.53.0"
-  }
+  "devDependencies": {}
 }
