--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "@utils/shared",
+  "name": "@csisp/utils",
   "version": "1.0.0",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "lint": "eslint ."
+    "build": "tsc"
   },
   "dependencies": {
-    "@types/shared": "workspace:*"
+    "@csisp/types": "workspace:*"
   },
-  "devDependencies": {
-    "typescript": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.53.0"
-  }
+  "devDependencies": {}
 }
