chore(backend): upgrade bcrypt to v6.0.0 and fix lint-staged config

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "eslint --fix"
     ],
     "**/*.{js,mjs,cjs,ts,jsx,tsx,vue,html,json,css,scss,md}": [
-      "prettier --config prettier.json --write"
+      "prettier --write"
     ],
     "**/*.{css,scss,vue}": [
       "stylelint --fix"
