--- a/apps/frontend-admin/package.json
+++ b/apps/frontend-admin/package.json
@@ -7,24 +7,25 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.24",
-    "pinia": "^2.1.7",
-    "vue-router": "^4.3.0",
+    "@csisp/types": "workspace:*",
+    "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.6.0",
-    "naive-ui": "^2.38.1",
     "echarts": "^5.5.0",
+    "naive-ui": "^2.38.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.5.24",
     "vue-echarts": "^6.6.1",
-    "@csisp/types": "workspace:*"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "sass": "^1.69.5",
     "vite": "npm:rolldown-vite@7.2.2",
-    "vue-tsc": "^3.1.3",
-    "sass": "^1.69.5"
+    "vue-tsc": "^3.1.3"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.2"
