--- a/apps/frontend-admin/tsconfig.app.json
+++ b/apps/frontend-admin/tsconfig.app.json
@@ -1,5 +1,11 @@
 {
   "extends": ["../../tsconfig.json", "@vue/tsconfig/tsconfig.dom.json"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
