--- a/apps/frontend-admin/tsconfig.node.json
+++ b/apps/frontend-admin/tsconfig.node.json
@@ -1,5 +1,11 @@
 {
   "extends": ["../../tsconfig.node.json"],
   "include": ["vite.config.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
