feat(bff): 实现管理员仪表盘聚合与追踪功能
- 新增管理员仪表盘数据聚合服务，支持按时间范围查询
- 添加 trace-id 中间件实现请求链路追踪
- 重构 JWT 认证与角色校验中间件为共享模块
- 实现 BFF 到后端的兜底代理中间件
- 更新前端仪表盘页面适配新接口
- 完善文档说明追踪与监控设计

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "tsx app.ts",
-    "build": "tsc",
+    "dev": "nodemon --exec tsx app.ts",
+    "build": "esbuild app.ts --bundle --platform=node --outfile=dist/app.js",
     "start": "node dist/app.js"
   },
   "dependencies": {
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "nodemon": "^3.0.0",
+    "tsx": "^4.0.0",
     "@types/koa": "^3.0.1",
     "@types/koa-bodyparser": "^4.3.13"
   }
