feat(infra): 重构数据库管理结构并迁移种子数据
refactor(db): 将数据库配置和种子数据迁移到独立包
feat(scripts): 添加跨平台数据库初始化脚本
chore: 更新后端项目依赖和配置
fix(database): 修复环境变量处理和数据库连接逻辑
docs: 更新初始化脚本的使用说明

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:admin": "pnpm --filter frontend-admin dev",
     "dev:bff": "pnpm --filter @csisp/bff dev",
     "dev:portal": "pnpm --filter frontend-portal dev",
-    "dev:backend": "pnpm --filter backend dev",
+    "dev:backend": "pnpm --filter @csisp/backend dev",
     "build:admin": "pnpm --filter frontend-admin build",
     "build:bff": "pnpm --filter @csisp/bff build",
     "build:portal": "pnpm --filter frontend-portal build",
