--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "overrides": {
       "koa": "^2.15.0",
       "@koa/router": "^14.0.0",
-      "koa-bodyparser": "^4.4.1"
+      "koa-bodyparser": "^4.4.1",
+      "dotenv": "^16.4.5"
     }
   }
 }
