--- a/.github/workflows/sync-env-variables.yml
+++ b/.github/workflows/sync-env-variables.yml
@@ -15,6 +15,15 @@ on:
           - development
           - staging
           - production
+        default: development
+  push:
+    branches:
+      - main
+      - staging
+      - development
+    paths:
+      - '.env.example'
+      - '.env.*.example'
 
 permissions:
   actions: write # allow github-script to call environment variables API
@@ -26,11 +35,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Determine environment: prefer manual input; otherwise map branch → environment
+      - name: Resolve target environment name
+        id: resolve_env
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const inputEnv = core.getInput('environment', { required: false })
+            let envName = inputEnv && inputEnv.trim()
+            if (!envName) {
+              const ref = context.ref
+              if (ref === 'refs/heads/main') envName = 'production'
+              else if (ref === 'refs/heads/staging') envName = 'staging'
+              else envName = 'development'
+            }
+            core.setOutput('env_name', envName)
+
       # Pick environment-specific example file if present, else fallback
       - name: Resolve environment-specific example path
         id: resolve
         run: |
-          FILE=".env.${{ inputs.environment }}.example"
+          FILE=".env.${{ steps.resolve_env.outputs.env_name }}.example"
           if [ -f "$FILE" ]; then
             echo "path=$FILE" >> $GITHUB_OUTPUT
           else
@@ -57,6 +82,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.ENV_ADMIN_TOKEN }} # PAT with repo env variables write permission
+          environment: ${{ steps.resolve_env.outputs.env_name }}
+          json_global: ${{ steps.parse_global.outputs.json }}
+          json_env: ${{ steps.parse_env.outputs.json }}
           script: |
             const envName = core.getInput('environment', { required: true })
             const globalVars = JSON.parse(core.getInput('json_global') || '{}')
@@ -69,7 +97,3 @@ jobs:
                 owner, repo, environment_name: envName, name, value
               })
             }
-        env:
-          json_global: ${{ steps.parse_global.outputs.json }}
-          json_env: ${{ steps.parse_env.outputs.json }}
-          environment: ${{ inputs.environment }}
