--- a/.github/workflows/sync-env-variables.yml
+++ b/.github/workflows/sync-env-variables.yml
@@ -93,9 +93,14 @@ jobs:
             const owner = context.repo.owner
             const repo = context.repo.repo
             core.info(`Target environment: ${envName}`)
+            if (!envName) {
+              core.setFailed('Resolved environment name is empty; aborting write')
+              return
+            }
+            const headers = { 'X-GitHub-Api-Version': '2022-11-28', 'Accept': 'application/vnd.github+json' }
             for (const [name, value] of Object.entries(payload)) {
               await github.request('PUT /repos/{owner}/{repo}/environments/{environment_name}/variables/{name}', {
-                owner, repo, environment_name: envName, name, value
+                owner, repo, environment_name: envName, name, value, headers
               })
               core.info(`Set variable ${name}`)
             }
@@ -103,3 +108,17 @@ jobs:
           ENV_NAME: ${{ steps.resolve_env.outputs.env_name }}
           JSON_GLOBAL: ${{ steps.parse_global.outputs.json }}
           JSON_ENV: ${{ steps.parse_env.outputs.json }}
+
+      - name: Verify environment variables
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.ENV_ADMIN_TOKEN }}
+          script: |
+            const envName = process.env.ENV_NAME
+            const owner = context.repo.owner
+            const repo = context.repo.repo
+            const headers = { 'X-GitHub-Api-Version': '2022-11-28', 'Accept': 'application/vnd.github+json' }
+            const res = await github.request('GET /repos/{owner}/{repo}/environments/{environment_name}/variables', { owner, repo, environment_name: envName, headers })
+            core.info(`Environment '${envName}' has ${res.data.variables?.length ?? 0} variables after sync`)
+        env:
+          ENV_NAME: ${{ steps.resolve_env.outputs.env_name }}
