chore: 更新项目配置与文档
- 删除无用的 docker-compose.yml 和环境变量示例文件
- 更新 .gitignore 规则，优化 IDE 配置文件的处理
- 同步 pnpm 版本至 10.22.0，并更新相关初始化脚本
- 为各子项目添加统一的格式化脚本
- 新增 .trae 项目规则文档
- 新增跨平台环境初始化脚本
- 更新 README 文档，补充环境要求和常见问题

--- a/.gitignore
+++ b/.gitignore
@@ -114,9 +114,12 @@ docs/.vitepress/cache
 .pnp.*
 
 # IDE
-.vscode/
+.vscode/*
+!.vscode/extensions.json
 .idea/
-.trae/
+.trae/*
+!.trae/rules/
+!.trae/rules/*
 *.swp
 *.swo
 *~
