--- a/apps/frontend-admin/package.json
+++ b/apps/frontend-admin/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "format": "pnpm exec eslint . --fix && pnpm exec prettier --write . && pnpm exec stylelint 'src/**/*.{css,scss,vue}' --fix"
   },
   "dependencies": {
     "@csisp/types": "workspace:*",
