chore: 更新 husky 配置和格式化脚本
将 husky 的 pre-commit 钩子从 npx 改为 pnpm 执行
添加 prepare 脚本自动安装 husky
统一格式化 vscode 扩展配置文件缩进

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "format": "eslint . --fix && pnpm prettier --write . && stylelint '**/*.{css,scss,vue}' --fix",
-    "lint:staged": "lint-staged"
+    "lint:staged": "lint-staged",
+    "prepare": "husky"
   },
   "packageManager": "pnpm@10.22.0",
   "workspaces": [
