feat(redis): 添加Redis缓存支持并集成到核心服务
添加统一的Redis客户端封装包@csisp/redis，提供基础缓存操作能力
在backend和bff服务中集成Redis缓存，优化Dashboard、User、Course等核心服务的查询性能
更新环境变量配置和文档，说明Redis部署规范和缓存键设计约定
调整初始化脚本的日志格式，增加数据库容器启动提示

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ DB_PASSWORD=replace-me
 DATABASE_URL=postgres://admin:replace-me@localhost:5433/csisp
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_ENABLED=false
+REDIS_DB=0
+REDIS_PASSWORD=
+REDIS_NAMESPACE=csisp
 NODE_ENV=development
 LOG_LEVEL=info
 JWT_SECRET=replace-me
