--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@csisp/middlewares": "workspace:*",
+    "@csisp/redis": "workspace:*",
     "@csisp/types": "workspace:^1.0.0",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^14.0.0",
