refactor: 更新后端集成与BFF配置
- 升级BFF的Koa版本至3.x并更新相关文档
- 将BE_BACKEND_URL统一重命名为BACKEND_INTEGRATED_URL
- 为backend-integrated服务添加全局API前缀
- 优化PostgreSQL连接的单例实现
- 清理package.json中不必要的覆盖配置
- 更新.env.example文件配置项与注释

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,37 @@
-DB_HOST=localhost
-DB_PORT=5433
-DB_NAME=csisp
-DB_USER=admin
-DB_PASSWORD=replace-me
-DATABASE_URL=postgres://admin:replace-me@localhost:5433/csisp
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_ENABLED=false
-REDIS_DB=0
-REDIS_PASSWORD=
-REDIS_NAMESPACE=csisp
-NODE_ENV=development
-LOG_LEVEL=info
-JWT_SECRET=replace-me
-JWT_EXPIRES_IN=1h
-JWT_REFRESH_EXPIRES_IN=7d
-BACKEND_PORT=3000
-BFF_PORT=4000
-BE_BACKEND_URL=http://localhost:3000
-BE_COURSE_URL=http://localhost:3000
-BE_ATT_URL=http://localhost:3000
-BE_HW_URL=http://localhost:3000
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=replace-me
-POSTGRES_DB=csisp
+# 数据库配置
+DB_HOST=localhost          # 数据库主机地址
+DB_PORT=5433               # 数据库端口号
+DB_NAME=csisp              # 数据库名称
+DB_USER=admin              # 数据库用户名
+DB_PASSWORD=replace-me     # 数据库密码
+DATABASE_URL=postgres://admin:replace-me@localhost:5433/csisp  # 完整数据库连接URL
+
+# Redis配置
+REDIS_HOST=localhost       # Redis主机地址
+REDIS_PORT=6379            # Redis端口号
+REDIS_ENABLED=false        # 是否启用Redis（true/false）
+REDIS_DB=0                 # Redis数据库索引
+REDIS_PASSWORD=            # Redis密码（可选）
+REDIS_NAMESPACE=csisp      # Redis键名前缀
+
+# 应用程序配置
+NODE_ENV=development       # 运行环境（development/production）
+LOG_LEVEL=info             # 日志级别（debug/info/warn/error）
+
+# JWT配置
+JWT_SECRET=replace-me      # JWT签名密钥（生产环境必须替换为安全的密钥）
+JWT_EXPIRES_IN=1h          # JWT访问令牌过期时间
+JWT_REFRESH_EXPIRES_IN=7d  # JWT刷新令牌过期时间
+
+# 服务端口与URL配置
+BACKEND_INTEGRATED_PORT=3100  # 集成后端服务端口
+BACKEND_INTEGRATED_URL=http://localhost:3100  # 集成后端服务URL
+BFF_PORT=4000               # 前端后端（BFF）服务端口
+BE_COURSE_URL=http://localhost:3100  # 课程服务后端URL
+BE_ATT_URL=http://localhost:3100      # 考勤服务后端URL
+BE_HW_URL=http://localhost:3100       # 作业服务后端URL
+
+# Docker PostgreSQL配置（仅用于容器化部署）
+POSTGRES_USER=postgres     # PostgreSQL根用户名
+POSTGRES_PASSWORD=replace-me  # PostgreSQL根密码
+POSTGRES_DB=csisp          # PostgreSQL数据库名称
