feat: 新增MongoDB支持与内容管理模块
refactor: 重构数据库迁移与种子脚本至db-workflows包

feat(backend): 集成Mongoose与内容模块

feat(dto): 添加数据验证DTO类

docs: 更新数据库文档说明MongoDB集成

chore: 更新依赖与Docker配置支持MongoDB

test: 添加健康检查接口MongoDB测试

ci: 更新初始化脚本支持MongoDB

build: 移除旧db-schema包

--- a/infra/database/docker-compose.db.yml
+++ b/infra/database/docker-compose.db.yml
@@ -29,6 +29,20 @@ services:
       retries: 3
     restart: unless-stopped
 
+  mongo:
+    image: mongo:6
+    ports:
+      - '27017:27017'
+    volumes:
+      - mongo_data:/data/db
+    healthcheck:
+      test: ['CMD', 'mongosh', '--eval', 'db.runCommand({ ping: 1 })']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   redis_data:
+  mongo_data:
