--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -15,17 +15,21 @@
     "@csisp/types": "workspace:^1.0.0",
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^10.4.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
-    "@types/node": "^20.19.25",
     "@types/bcrypt": "^6.0.0",
+    "@types/node": "^20.19.25",
     "esbuild": "^0.19.0",
     "nodemon": "^3.0.0",
     "tsx": "^4.0.0"
