--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -15,6 +15,7 @@
     "@csisp/types": "workspace:^1.0.0",
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
+    "@nestjs/sequelize": "^10.0.0",
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^10.4.0",
     "bcrypt": "^6.0.0",
@@ -24,6 +25,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.35.0",
+    "sequelize-typescript": "^2.1.6",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1"
   },
