--- a/apps/backend-integrated/tsconfig.json
+++ b/apps/backend-integrated/tsconfig.json
@@ -10,6 +10,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noEmit": false,
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "sourceMap": true,
+    "inlineSources": true,
     "baseUrl": "./src",
     "paths": {
       "@common/*": ["common/*"],
