ci(部署): 优化数据库部署工作流的可读性和格式
- 移除多余的空行保持代码整洁
- 使用 <<- 替代 << 以保持缩进一致性
- 保持环境变量文件和docker-compose文件的格式统一

--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -72,7 +72,7 @@ jobs:
           fi
           echo "部署环境: $DEPLOY_ENV"
           echo "DEPLOY_ENV=$DEPLOY_ENV" >> $GITHUB_ENV
-          
+
           # 设置环境特定的环境变量文件
           ENV_FILE=.env.$DEPLOY_ENV.example
           if [ ! -f "$ENV_FILE" ]; then
@@ -92,10 +92,10 @@ jobs:
         run: |
           # 创建.ssh目录
           mkdir -p ~/.ssh
-          
+
           # 配置SSH已知主机，避免首次连接确认
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-          
+
           # 设置SSH密钥权限
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
@@ -113,18 +113,18 @@ jobs:
           script: |
             # 设置错误处理：遇到错误立即退出
             set -e
-            
+
             # 输出部署信息
             echo "====================================="
             echo "开始部署数据库容器到 ${DEPLOY_ENV} 环境"
             echo "====================================="
-            
+
             # 创建项目目录（如果不存在）
             mkdir -p $HOME/$PROJECT_ROOT
             cd $HOME/$PROJECT_ROOT
-            
+
             # 创建或更新docker-compose.yml文件
-            cat > docker-compose.yml << 'EOF'
+            cat > docker-compose.yml <<- 'EOF'
 services:
   postgres:
     image: postgres:15
@@ -159,10 +159,10 @@ services:
 volumes:
   postgres_data:
   redis_data:
-EOF
-            
+            EOF
+
             # 创建或更新.env文件
-            cat > .env << 'EOF'
+            cat > .env <<- 'EOF'
 # 数据库配置
 DB_HOST=localhost
 DB_PORT=5433
@@ -182,39 +182,39 @@ REDIS_PORT=6379
 REDIS_ENABLED=true
 REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD || '' }}
 REDIS_NAMESPACE=csisp
-EOF
-            
+            EOF
+
             echo "=== 停止并移除旧容器 ==="
             # 停止并移除旧容器（如果存在）
             docker-compose down --remove-orphans || true
-            
+
             echo "=== 拉取最新镜像 ==="
             # 拉取最新的PostgreSQL和Redis镜像
             docker-compose pull
-            
+
             echo "=== 启动新容器 ==="
             # 启动新容器，强制重建以确保使用最新配置
             docker-compose up -d --force-recreate
-            
+
             echo "=== 等待容器启动完成 ==="
             # 等待PostgreSQL容器健康检查通过
             docker-compose wait postgres
-            
+
             # 等待Redis容器健康检查通过
             docker-compose wait redis
-            
+
             echo "=== 验证容器状态 ==="
             # 显示容器状态
             docker-compose ps
-            
+
             # 验证PostgreSQL连接
             echo "=== 验证PostgreSQL连接 ==="
             docker-compose exec -T postgres pg_isready -U postgres
-            
+
             # 验证Redis连接
             echo "=== 验证Redis连接 ==="
             docker-compose exec -T redis redis-cli ping
-            
+
             echo "====================================="
             echo "数据库容器部署完成！"
             echo "====================================="
