--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -124,45 +124,45 @@ jobs:
             cd $HOME/$PROJECT_ROOT
 
             # 创建或更新docker-compose.yml文件
-            cat > docker-compose.yml <<- 'EOF'
-services:
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-csisp}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-    ports:
-      - ${DB_PORT:-5433}:5432
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    restart: unless-stopped
+            cat > docker-compose.yml << 'EOF'
+            services:
+              postgres:
+                image: postgres:15
+                environment:
+                  POSTGRES_DB: ${POSTGRES_DB:-csisp}
+                  POSTGRES_USER: ${POSTGRES_USER:-postgres}
+                  POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+                ports:
+                  - ${DB_PORT:-5433}:5432
+                volumes:
+                  - postgres_data:/var/lib/postgresql/data
+                healthcheck:
+                  test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+                  interval: 30s
+                  timeout: 10s
+                  retries: 3
+                restart: unless-stopped
 
-  redis:
-    image: redis:7-alpine
-    ports:
-      - ${REDIS_PORT:-6379}:6379
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    restart: unless-stopped
+              redis:
+                image: redis:7-alpine
+                ports:
+                  - ${REDIS_PORT:-6379}:6379
+                volumes:
+                  - redis_data:/data
+                healthcheck:
+                  test: ["CMD", "redis-cli", "ping"]
+                  interval: 30s
+                  timeout: 10s
+                  retries: 3
+                restart: unless-stopped
 
-volumes:
-  postgres_data:
-  redis_data:
-            EOF
+            volumes:
+              postgres_data:
+              redis_data:
+EOF
 
             # 创建或更新.env文件
-            cat > .env <<- 'EOF'
+            cat > .env << 'EOF'
 # 数据库配置
 DB_HOST=localhost
 DB_PORT=5433
@@ -182,7 +182,7 @@ REDIS_PORT=6379
 REDIS_ENABLED=true
 REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD || '' }}
 REDIS_NAMESPACE=csisp
-            EOF
+EOF
 
             echo "=== 停止并移除旧容器 ==="
             # 停止并移除旧容器（如果存在）
