--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec tsx src/main.ts",
     "build": "esbuild src/main.ts --bundle --platform=node --outfile=dist/main.js",
     "start": "node dist/main.js",
-    "format": "pnpm exec eslint . --fix && pnpm exec prettier --write ."
+    "format": "pnpm exec eslint . --fix && pnpm exec prettier --write .",
+    "db:types": "node scripts/run-kanel.cjs"
   },
   "dependencies": {
     "@csisp/logger": "workspace:*",
@@ -15,25 +16,28 @@
     "@csisp/types": "workspace:^1.0.0",
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
-    "@nestjs/sequelize": "^10.0.0",
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^10.4.0",
+    "@nestjs/sequelize": "^10.0.0",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.35.0",
-    "sequelize-typescript": "^2.1.6",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1"
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.25",
+    "@types/pg": "^8.16.0",
     "esbuild": "^0.19.0",
+    "kanel": "^3.0.0",
     "nodemon": "^3.0.0",
+    "pg": "^8.11.3",
     "tsx": "^4.0.0"
   }
 }
