--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --exec tsx src/main.ts",
-    "build": "esbuild src/main.ts --bundle --platform=node --outfile=dist/main.js",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "format": "pnpm exec eslint . --fix && pnpm exec prettier --write .",
     "db:types": "node scripts/run-kanel.cjs"
   },
   "dependencies": {
-    "@csisp/logger": "workspace:*",
-    "@csisp/redis": "workspace:*",
-    "@csisp/types": "workspace:^1.0.0",
+    "redis": "^4.6.7",
+    "pino": "^9.3.0",
+    "pino-pretty": "^11.2.2",
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
     "@nestjs/mongoose": "^11.0.4",
