feat: 添加 turbo 支持并优化初始化脚本
- 添加 turbo.json 配置文件用于 monorepo 任务管理
- 更新各子项目的 package.json 添加 lint 脚本
- 优化初始化脚本，添加 Thrift 编译器检查
- 更新 README 文档说明新的开发流程
- 添加 .turbo 到 gitignore

--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "format": "pnpm exec eslint . --fix && pnpm exec prettier --write .",
+    "lint": "eslint .",
     "db:types": "node scripts/run-kanel.cjs"
   },
   "dependencies": {
