--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "vue.volar",
     "stylelint.vscode-stylelint",
     "dariofuzinato.vue-peek",
-    "bradlc.vscode-tailwindcss"
+    "bradlc.vscode-tailwindcss",
+    "byted-ferry-team.thrift-language-support"
   ]
 }
