--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec tsx app.ts",
     "build": "esbuild app.ts --bundle --platform=node --outfile=dist/app.js",
     "start": "node dist/app.js",
-    "format": "pnpm exec eslint . --fix && pnpm exec prettier --write ."
+    "format": "pnpm exec eslint . --fix && pnpm exec prettier --write .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@csisp/logger": "workspace:*",
