feat(backoffice): 初始化后台管理系统基础架构
- 添加 Next.js 应用基础配置和页面结构
- 实现 RPC 接口分发器和 JSON-RPC 工具函数
- 添加数据库连接和 JWT 认证功能
- 实现基础 API 路由和领域处理器
- 更新 IDL 文件生成脚本和目录结构
- 配置环境变量模板和开发依赖

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# 仅用于本地开发的环境变量示例文件
+# 复制为 .env 后按需修改；生产/CI 环境请通过安全渠道注入变量，不要提交真实敏感值
+
 # 数据库配置
 # 数据库主机地址
 DB_HOST=localhost
@@ -29,6 +32,8 @@ REDIS_NAMESPACE=csisp
 # MongoDB配置
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=csisp
+# 是否启用 MongoDB 相关流程（如内容种子）
+MONGODB_ENABLED=true
 
 # 应用程序配置
 # 运行环境（development/production）
@@ -38,7 +43,7 @@ LOG_LEVEL=info
 
 # 日志输出（开发环境）
 # 是否同时写入文件（development 环境生效，默认 true）
-LOG_TO_FILE=true
+LOG_TO_FILE=false
 # 文件日志根目录（默认 log）
 LOG_DIR=log
 # 控制台 pretty 彩色输出开关（development 默认 true）
@@ -48,7 +53,7 @@ LOG_RETENTION_DAYS=7
 
 # JWT配置
 # JWT签名密钥（生产环境必须替换为安全的密钥）
-JWT_SECRET=replace-me
+JWT_SECRET=local-dev-do-not-use
 # JWT访问令牌过期时间
 JWT_EXPIRES_IN=1h
 # JWT刷新令牌过期时间
