feat(backoffice): 实现后台管理系统基础架构与功能模块
- 新增后台管理布局与路由结构，包含用户中心、日志管理和数据库管理页面
- 添加认证登录页面与布局，支持JWT令牌校验
- 集成Ant Design组件库，配置中文语言环境
- 实现RPC客户端与服务端通信框架，支持JSON-RPC协议
- 添加数据库查询功能，支持表结构查看与数据分页
- 定义Thrift IDL契约并生成类型声明，确保类型安全
- 完善环境变量配置与文档说明

--- a/infra/idl/package.json
+++ b/infra/idl/package.json
@@ -9,17 +9,21 @@
   "scripts": {
     "gen:ts": "bash ./scripts/gen-ts.sh && tsc -p tsconfig.json",
     "gen:js": "bash ./scripts/gen-js.sh",
-    "gen:all": "bash ./scripts/gen-ts.sh && tsc -p tsconfig.json && bash ./scripts/gen-js.sh",
-    "idl:gen": "pnpm run gen:all",
-    "build": "pnpm run gen:all",
-    "lint": "eslint .",
-    "format": "pnpm exec prettier --write ."
+    "build": "pnpm gen:ts && pnpm gen:js"
   },
   "files": [
     "dist",
     "src/v1"
   ],
   "exports": {
+    "./backoffice": {
+      "import": "./dist/backoffice.js",
+      "types": "./dist/backoffice.d.ts"
+    },
+    "./backend": {
+      "import": "./dist/backend.js",
+      "types": "./dist/backend.d.ts"
+    },
     "./ts/*": {
       "import": "./dist/ts/*",
       "types": "./dist/ts/*"
