--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -12,13 +12,17 @@
     "format": "eslint . --fix && pnpm prettier --write ."
   },
   "dependencies": {
+    "@csisp/idl": "workspace:*",
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.8",
     "pino": "^9.5.0",
     "pg": "^8.12.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "antd": "^5.18.4",
+    "@ant-design/icons": "^5.5.1",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
