--- a/apps/backend-integrated/tsconfig.json
+++ b/apps/backend-integrated/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "CommonJS",
     "lib": ["ES2020"],
     "types": ["node"],
     "esModuleInterop": true,
@@ -13,13 +13,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "sourceMap": true,
-    "inlineSources": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@common/*": ["common/*"],
-      "@modules/*": ["modules/*"],
-      "@infra/*": ["infra/*"]
-    }
+    "inlineSources": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
