refactor(utils): 将环境加载功能迁移至 utils 包并重构相关依赖
feat: 添加 utils 包的环境加载模块并更新相关配置
refactor: 移除各应用中的重复环境加载代码，统一使用 utils 包
style: 清理注释和代码格式，优化日志模块实现
build: 更新 turbo 配置和 package.json 脚本

--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -11,6 +11,7 @@
     "db:types": "tsx scripts/run-kanel.ts"
   },
   "dependencies": {
+    "@csisp/utils": "workspace:*",
     "redis": "^4.6.7",
     "pino": "^9.3.0",
     "pino-pretty": "^11.2.2",
