refactor(bff): 重构BFF架构为JSON-RPC风格
feat(rpc): 新增JSON-RPC核心模块与注册分发机制
feat(modules): 实现admin/portal模块化结构
feat(openrpc): 添加OpenRPC文档生成端点
refactor(middleware): 调整中间件适配RPC请求
refactor(router): 重构路由为RPC风格
chore(deps): 移除独立logger/redis/upstream包，改为直接依赖
docs: 添加项目README说明RPC规范

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -5,23 +5,27 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --exec tsx app.ts",
+    "dev:portal": "BFF_ENABLED_SUBPROJECTS=portal pnpm run dev",
+    "dev:admin": "BFF_ENABLED_SUBPROJECTS=admin pnpm run dev",
     "build": "esbuild app.ts --bundle --platform=node --outfile=dist/app.js",
     "start": "node dist/app.js",
+    "start:portal": "BFF_ENABLED_SUBPROJECTS=portal pnpm run start",
+    "start:admin": "BFF_ENABLED_SUBPROJECTS=admin pnpm run start",
     "format": "pnpm exec eslint . --fix && pnpm exec prettier --write .",
     "lint": "eslint ."
   },
   "dependencies": {
     "@csisp/utils": "workspace:*",
-    "@csisp/logger": "workspace:*",
-    "@csisp/redis": "workspace:*",
-    "@csisp/upstream": "workspace:*",
     "@csisp/types": "workspace:^1.0.0",
     "koa": "^3.1.1",
     "@koa/router": "^14.0.0",
     "koa-bodyparser": "^4.4.1",
     "undici": "^6.19.8",
     "zod": "^3.23.8",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "esbuild": "^0.19.0",
