--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -19,14 +19,15 @@
     "format": "pnpm exec prettier --write ."
   },
   "dependencies": {
-    "@csisp/logger": "workspace:*",
     "@csisp/utils": "workspace:*",
     "mongodb": "^6.8.0",
     "dotenv": "^16.4.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.0",
-    "umzug": "^3.8.0"
+    "umzug": "^3.8.0",
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
