refactor(bff): 重构中间件和路由配置
将路由配置从独立文件移动到模块入口
添加统一的中间件设置函数
删除不再使用的类型定义文件
优化 tsconfig 路径配置

--- a/apps/bff/tsconfig.json
+++ b/apps/bff/tsconfig.json
@@ -11,13 +11,13 @@
     "types": ["node", "koa", "koa-bodyparser"],
     "baseUrl": "./",
     "paths": {
-      "@router": ["src/router"],
       "@middleware": ["src/middleware"],
       "@middleware/*": ["src/middleware/*"],
-      "@infra": ["src/infra"],
       "@infra/*": ["src/infra/*"],
       "@utils/*": ["src/utils/*"],
-      "@module/*": ["src/modules/*"]
+      "@modules": ["src/modules"],
+      "@modules/*": ["src/modules/*"],
+      "@rpc/*": ["src/rpc/*"]
     }
   },
   "include": ["app.ts", "src"]
