--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -16,6 +16,9 @@
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sequelize": "^6.37.3",
+    "ioredis": "^5.3.2",
+    "mongoose": "^8.7.0",
     "zod": "^3.23.8",
     "pino": "^9.5.0",
     "pg": "^8.12.0",
