--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -11,29 +11,30 @@
     "format": "eslint . --fix && pnpm prettier --write ."
   },
   "dependencies": {
-    "@csisp/utils": "workspace:*",
+    "@ant-design/icons": "^5.5.1",
     "@csisp/idl": "workspace:*",
+    "@csisp/utils": "workspace:*",
+    "antd": "^5.18.4",
+    "dayjs": "^1.11.13",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.0",
     "next": "^15.0.3",
+    "pg": "^8.12.0",
+    "pino": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sequelize": "^6.37.3",
-    "ioredis": "^5.3.2",
-    "mongoose": "^8.7.0",
-    "zod": "^3.23.8",
-    "pino": "^9.5.0",
-    "pg": "^8.12.0",
-    "jsonwebtoken": "^9.0.2",
-    "antd": "^5.18.4",
-    "@ant-design/icons": "^5.5.1",
-    "dayjs": "^1.11.13"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "tsx": "^4.21.0",
     "@types/node": "^20.11.28",
     "@types/pg": "^8.6.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "typescript": "^5.9.3",
-    "kanel": "^3.16.0"
+    "kanel": "^3.16.0",
+    "sass": "^1.69.5",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
